--- a/vanilaReact/vanilaReact.html
+++ b/vanilaReact/vanilaReact.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <script type="module" src="./vr-model/vanilaReact.js"></script>
+  <title>vr</title>
 </head>
 <body>
   <div id="root"></div>
-  <script src="./vanilaReact.js"></script>
 </body>
 </html>
