아ㅏㅏㅏㅏㅏㅏ 졸려서 못하겠다ㅏㅏㅏㅏㅏㅏㅏㅏㅏ

--- a/scriptCording/jsDom.html
+++ b/scriptCording/jsDom.html
@@ -8,6 +8,6 @@
 </head>
 <body>
   <div id="root"></div>
-  <script src="./jsDom.js"></script>
+  <script src="./jsDom.js" type="module"></script>
 </body>
 </html>
